<resources>
    <string name="app_name">COEP Clubs</string>
    <string name="title_activity_boat_club">BoatClub</string>
    <string name="boatinfo">COEP is proud to have a Boat Club, which is one of its kind in the country. Situated on the banks of Mula River, this club was established in the year 1928. The club owns about 70 trainee and racing boats, which can be used for various competitions besides regular practice. The club is an active member of professional associations like Maharashtra Rowing Association (MRA) and the Amateur Rowers Association (ARAE).It has wide range of unique boats that include punts, single sculls, racing pair, racing four, racing eight, Jr. Whiff, Sr. Whiff, training scull, tuff four, canoes and kayaks. In addition to that boat club also houses a well equipped gymnasium. This includes a sprawling indoor hall comprising of four badminton courts and one table-tennis court, thus providing students of this college with best athletic endeavors. It hosts a canteen as well. Membership of the Boat club is mandatory to all the under graduate and postgraduate students seeking admission in this institute. Moreover, facilities of the boat club are extended to every Alumni of this College.The Boatclub, as it is known, is one of the favourite spot for most people in college. The riverside ambience offers a majestic view of the Mula River. The Boatclub has become synonymous with COEP for every COEPian.</string>
    <string name="m">Motto</string>
    <string name="boatmotto">Row To Win</string>
    <string name="a">About</string>
    <string name="achieve">Achievements</string>
    <string name="fmi">For More Info</string>
    <string name="con">Contact</string>
    <string name="boatcontact">Boat CLub Secretary</string>
    <string name="astroinfo">Who hasn’t marveled at the celestial wonders and experienced a sense of awe at being a part of such an infinite expanse? Since its foundation in 2004, the CoEP Astronomy club seeks to build on this fascination and brings innovation and passion to its vision of spreading the awareness and knowledge of astronomy and space sciences to the students. The CoEP Astronomy club, an ambitious team driven by amateur astronomers, has managed to conjure up a lot of interest amongst students in the science of stargazing. Integrating technical skill with astronomical science, the club has initiated many projects, some of which being the construction of one of India’s largest amateur built telescope – a 12” Newtonian reflector, construction of mobile, inflatable planetarium dome, etc. The club strives to quench a student’s thirst for astronomy by organizing various exciting events such as Star Party (a fun-filled night of star-gazing), Planetarium visits, Quiztronomy (a quiz to test people’s knowledge on everything seen beyond the night sky), Telescope building and handling sessions (telescope – every astronomers weapon), and many more. The club is also looking forward to publish its Newsletter from the academic year 2014-15 in order to promote righteous information about Astronomy and related science. In addition to this, the club in association with the Inter-University Centre for Astronomy and Astrophysics, Pune (IUCAA) organizes the event StareWay to Heaven during MindSpark with an aim to bring astronomy to the masses. Within this, a mobile planetarium is set up in the college, where the night sky is simulated and the people are introduced to various constellations and stars. Discussions and brainstorming sessions are also held every week wherein members explore the Universe.</string>
    <string name="astrocontact">Astronomy Head</string>
    <string name="pc">Project Completed</string>
    <string name="rsccontact">RSC Head</string>
    <string name="rscinfo"><![CDATA[Robot Study Circle (known as RSC) is a community of students guided by faculty members, industrial experts & alumni, who find pleasure in Robotics. It is a platform for like-minded people to come together, share knowledge and strive to create futuristic automated machines. The objective of Robot Study Circle is to build international quality Robots, that will prove to be useful in a variety of environments, especially in the industries.]]></string>
    <string name="procom">Basic Line Tracer Robot\nAutonomous Chess Playing Robot\nQuadrotor Under Water Autonomous Vehicle (Fish robot) (Won Best Mini Project Award 2011)\nFire Extinguisher Robot (Won Best Mini Project Award 2012)\nWireless Image Transmission 5-Band Graphic Equalizer Bomb Detection Disposal Squad Assisting robot\nAutonomous Rubik’s Cube solving Robot\nHydroquadrotor Can Picker Robot (Won Best Mini Project Award in 2013)</string>
    <string name="rscachieve"><![CDATA[Design & Manufacturing of Robot for Pune Police Bomb Detection & Desposal Squad Best\nIdea Award in Robocon 2014\nBest Innovative Design Award in Robocon 2013\n2nd Runner-up at ABU Asia Pacific ROBOCON 2012\n2nd Runner-up at ABU Asia Pacific ROBOCON 2011\nBest Manual Operator Award at ABU Asia Pacific ROBOCON 2011\nForbes Marshall outstanding project Award for year 2009-10 to Robot Study Circle team for Design & Development of Quad rotor\nCOEP Alumni Association’s best project Award to a team from Robot Study Circle for Design and Manufacturing of Self Balancing Personal Transportation Vehicle (Mechanical Department)\nCOEP Alumni Association’s best project Award to two teams from Robot Study Circle(E&TC Department): \nAutonomous Underwater Vehicle (First prize). \nGesture Controlled Robotic Arm (Fourth Prize).]]></string>
    <string name="op">Ongoing Projects</string>
    <string name="onpro">Wall Climbing Robot\nUnder Car Scanner\nQuadrotor Base Surveillance\nUnder water wireless communication\nHovercraft</string>
    <string name="ancinfo">ANC is one of the oldest group at college. The Arts and Crafts group, fondly called as \'AnC\' in the college, has made COEP proud by creating the Guinness World Record for the longest painting by numbers in 2008. It has members right from the first year up to the final year. All the activities of the Arts and Crafts group always have something new, creative and innovative. The Arts and Crafts group has been instrumental in decorating the entire COEP campus during college festivals like Mind Spark, Zest, Regatta and also during the annual gathering. The Arts and Crafts students organise an annual exhibition every year in the college campus where the team displays its art collection and also encourages other students to participate.</string>
    <string name="anccontact">ANC Head</string>
    <string name="photoinfo">Welcome to official Photography Club of Govt.College Of Engineering,Pune (COEP). The Club consists of Amateur Photographers who have come together to share and help eachother to learn the art of Photography, and Undertake Photography as an Interesting Hobby. The club will initiate conducting photo-walks, various workshops and learning sessions on photography as well as post-processing.</string>
    <string name="photocontact">Photography Club Head</string>
    <string name="danceinfo">COEP Dance Club is an organization that allows it members to experience the wonder of dance and the joy of performing. Students are exposed to different styles of dance from ballet to theater, modern, hip hop, tap and jazz. They learn to see dance as an art, a way of expression. Sometimes it is just the simple expression of fun and joy and other times there is a poignant message to be relayed. Dance Club allows even the non-dancer to be part of the excitement of the performance. Everyone in Dance club participates in the wonder of the annual show.We invite you all for a journey filled with endless dance and fun.Keep Dancing!</string>
    <string name="dancecontact">Dance Club Head</string>
    <string name="neminfo">Nemesis is a team from College of Engineering, Pune working under CoEP Motorsports, that participate at the annually held BAJA SAE.</string>
    <string name="nemcontact">Team Nemesis Head</string>
    <string name="nemachieve">2007 \n1st Overall Winners\n\n   2008\n  2nd in Design\n\n   2012 \n 1st in Acceleration\n\n   2012 South Africa\n  1st Cost Report \n 2nd Feasibility of Mass Production \n 2nd Skidpad  \n2nd Design\n  6th Endurance\n  6th Overall  \n\n 2013 \n 1st in CAE \n 1st in Build Quality \n 1st in Acceleration \n 1st in Raftar (Quickest Lap)\n  1st in Endurance Race\n  1st Overall Winners \n \n 2013 South Africa \n 1st Cost Report \n 3rd Design \n 1st Endurance \n 3rd Overall \n\n  2014 India  \n1st CAE \n 1st Acceleration \n 1st Manuverability \n 2nd Hill climb \n 2nd Suspension and traction \n 2nd Raftaar\n  2nd Build quality\n  2nd Overall Champions \n \n 2015 India \n 1st Overall Champions \n 1st Acceleration\n  1st Hill Climb \n 1st Raftaar \n 2nd CAE award \n 2nd Build quality \n 2nd Safe Vehicle Award \n 2nd Innovation \n\n  2015 Maryland USA \n 6th Design \n 12th Suspension\n  13th Hill Climb\n  19th Endurance \n 15th Overall Performance\n  \n 2016 India\n  1st - Overall Champions\n  1st - Acceleration\n  1st - Suspension and Traction\n  1st - Engineering Design\n  1st - Technology Innovation\n  2nd - Maneuverability\n  2nd - Raftar\n  2nd - CAE\n  2nd - Build Quality\n  2nd - Safest Vehicle\n  Special Award - Best Driver\n \n   2016 Tennessee USA\n  3rd Design\n  9th Overall Performance</string>
    <string name="suninfo">Team COEP Sunrisers Is established at College of Engineering Pune with the aim of designing, fabricating, testing and racing a solar-electric vehicle.</string>
    <string name="suncontact">Sunrisers Head</string>
    <string name="octinfo">Team Octane Racing, from COEP, is a group of dedicated automobile engineers ought to make best racing car on the track for competitions as SUPRA and FSI.</string>
    <string name="octcontact">Octane Racing Head</string>
    <string name="octachieve">1st Engineering Design at SUPRA SAE-INDIA 2015\n  1st Autocross And Most Promising Team award at Formula Student India, 2015 \n 2nd Best Overall Award, 2014 \n Computer Aided Engineering Award 2011</string>
    <string name="jnvinfo">COEP Janeev Club (previously COEP Environment Club) had evolved from an environmental project initially undertaken by a group of Civil Engineering students. The club realized that all environmental and social issues are interconnected, and do not exist in isolation. Thus, it was decided to transform the club with a view to increase its scope by working on social issues as well. In the year 2011, the Environment Club was transformed into Janeev Club (Marathi: जाणीव, meaning: consciousness) as the socio-environmental club of COEP. The club aims at sensitizing students about various social and environmental issues and enhancing their knowledge regarding the same. The club conducts various activities like lectures and seminars by intellectuals and activists, documentary screenings, classic film screenings, discussions, street plays, awareness campaigns, tree plantation, poetry recitation, etc. Janeev Club members meet every Wednesday at 6 pm in Applied Mechanics Department in front of Boat Club. The club is open to all, runs democratically and disregards any hierarchical structure for its functioning.jnvinfo</string>
    <string name="janvmotto">अंधार भेदणाऱ्या जाणीवांना सामोरे जाऊ या. आपल्या संवेदना जागवू या. पर्यावरणाच्या पलीकडेही डोकावून पाहू या. जागवू या... एक जाणीव!</string>
    <string name="jcon">Janeev Head</string>
</resources>